# pixelhog

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  pixelhog.pyi  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
benches/: pixel_benches.rs
crates/pixelhog/: Cargo.toml
crates/pixelhog-python/: Cargo.toml
crates/pixelhog-python/src/: lib.rs
crates/pixelhog/benches/: pixel_benches.rs
crates/pixelhog/examples/: breakdown.rs  combined_estimate.rs  ssim_breakdown.rs
crates/pixelhog/src/: clusters.rs  comparison.rs  error.rs  image_utils.rs  lib.rs  pixelmatch.rs  ssim.rs
crates/pixelhog/tests/: integration.rs  mapbox_canonical.rs
examples/: breakdown.rs  combined_estimate.rs  ssim_breakdown.rs
python/tests/: test_pixelhog.py
src/: image_utils.rs  lib.rs  pixelmatch.rs  ssim.rs
tests/: integration.rs  mapbox_canonical.rs
