[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pixelhog"
version = "1.2.0"
description = "Rust-accelerated pixelmatch and SSIM for PNG bytes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "PostHog" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/PostHog/pixelhog"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pillow>=10.0",
]

[tool.maturin]
manifest-path = "crates/pixelhog-python/Cargo.toml"
features = ["extension-module"]
module-name = "pixelhog"
compatibility = "manylinux2014"

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["python/tests"]
